--- a/index.html
+++ b/index.html
@@ -2,39 +2,27 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8" />
-  <title>Yu-Gi-Oh XD - Mon Jeu</title>
+  <title>Yu-Gi-Oh XD - Menu</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <h1>🎴 Yu-Gi-Oh XD !</h1>
 
-  <nav>
-    <button onclick="showPage('shop')">🛒 Shop</button>
-    <button onclick="showPage('deck')">🃏 Deck</button>
-    <button onclick="showPage('combat')">⚔️ Combat</button>
+  <nav id="main-menu">
+    <button data-page="shop">Shop</button>
+    <button data-page="deck">Deck</button>
+    <button data-page="cartes">Cartes</button>
+    <button data-page="reglages">Réglages</button>
+    <button data-page="combat">Combat</button>
   </nav>
 
-  <section id="shop" class="page">Le shop sera ici</section>
-
-  <section id="deck" class="page hidden">
-    <h2>🃏 Deck Builder</h2>
-    <div id="deck-builder">
-      <div>
-        <h3>Cartes disponibles</h3>
-        <div id="available-cards" class="card-grid"></div>
-      </div>
-      <div>
-        <h3>Ton Deck (max 40 cartes)</h3>
-        <div id="player-deck" class="card-grid"></div>
-        <p id="deck-count">0 / 40 cartes</p>
-      </div>
-    </div>
+  <section id="pages">
+    <div id="shop" class="page">Bienvenue dans la boutique !</div>
+    <div id="deck" class="page hidden">Voici ton deck.</div>
+    <div id="cartes" class="page hidden">Voici tes cartes possédées.</div>
+    <div id="reglages" class="page hidden">Réglages du jeu.</div>
+    <div id="combat" class="page hidden">Prépare-toi au combat !</div>
   </section>
 
-  <section id="combat" class="page hidden">
-    <p>Le plateau de combat sera ici.</p>
-  </section>
-
-  <script type="module" src="main.js"></script>
+  <script src="main.js"></script>
 </body>
 </html>
