--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 </head>
 <body>
 
+  <h1 id="main-title">Yu-Gi-Oh! XD</h1>
+
   <nav id="main-menu">
     <button data-page="shop">Shop</button>
     <button data-page="deck">Deck</button>
