--- a/index.html
+++ b/index.html
@@ -1,17 +1,31 @@
-<h1 id="main-title">Yu-Gi-Oh XD</h1>
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+  <meta charset="UTF-8" />
+  <title>Yu-Gi-Oh XD - Menu</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
 
-<nav id="main-menu">
-  <button data-page="shop">Shop</button>
-  <button data-page="deck">Deck</button>
-  <button data-page="cartes">Cartes</button>
-  <button data-page="reglages">Réglages</button>
-  <button data-page="combat">Combat</button>
-</nav>
+  <h1 id="main-title">Yu-Gi-Oh XD</h1>
 
-<section id="pages">
-  <div id="shop" class="page">Bienvenue dans la boutique !</div>
-  <div id="deck" class="page hidden">Voici ton deck.</div>
-  <div id="cartes" class="page hidden">Voici tes cartes possédées.</div>
-  <div id="reglages" class="page hidden">Réglages du jeu.</div>
-  <div id="combat" class="page hidden">Prépare-toi au combat !</div>
-</section>
+  <nav id="main-menu">
+    <button data-page="shop">Shop</button>
+    <button data-page="deck">Deck</button>
+    <button data-page="cartes">Cartes</button>
+    <button data-page="reglages">Réglages</button>
+    <button data-page="combat">Combat</button>
+  </nav>
+
+  <section id="pages">
+    <div id="shop" class="page">Bienvenue dans la boutique !</div>
+    <div id="deck" class="page hidden">Voici ton deck.</div>
+    <div id="cartes" class="page hidden">Voici tes cartes possédées.</div>
+    <div id="reglages" class="page hidden">Réglages du jeu.</div>
+    <div id="combat" class="page hidden">Prépare-toi au combat !</div>
+  </section>
+
+  <script src="main.js"></script>
+</body>
+</html>
+
