--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
     <div id="reglages" class="page hidden">Réglages du jeu.</div>
     <div id="combat" class="page hidden">Prépare-toi au combat !</div>
   </section>
+  
+<script src="data/cards.js"></script>
+<script src="main.js"></script>
 
-  <script src="main.js"></script>
 </body>
 </html>
